--- a/2.AddTwoNumbers.md
+++ b/2.AddTwoNumbers.md
@@ -1,13 +1,17 @@
-##题目
-You are given two linked lists representing two non-negative numbers. 
-The digits are stored in reverse order and each of their nodes 
-contain a single digit. Add the two numbers and return it as a linked list.
-
-Input: (2 -> 4 -> 3) + (5 -> 6 -> 4)
-Output: 7 -> 0 -> 8
+##题目：Add Two Numbers
+_____________________________________________________________________
+> You are given two linked lists representing two non-negative numbers. 
+> The digits are stored in reverse order and each of their nodes 
+> contain a single digit. Add the two numbers and return it as a linked list.
+> 
+> Input: (2 -> 4 -> 3) + (5 -> 6 -> 4)
+> Output: 7 -> 0 -> 8
 
 ####**标签：**链表。 难度：中级
-
+####**刷题收获：**
+- 另一个ACM讲leedcode代码的学习网站：[点击这里](http://www.acmerblog.com/leetcode-solution-add-two-numbers-6298.html)
+- 关于函数传值，尤其是给指针传值，已加入个人CSDN博客：[点击这里](http://blog.csdn.net/qianggezaici/article/details/52234515)
+_________________________________________________________________________________________________________
 ###解法一：
 说明：一开始理解有出入，写成从后往前加了。
 附上代码：完整代码
@@ -180,7 +184,8 @@ int main()
 ```
 
 ###方法二：有按正确理解重新写代码
-**说明：**自己实现，递归写法，只贴出实现部分
+**说明：**
+自己实现，递归写法，只贴出实现部分
 ```
 class Solution {
 	/*******************************************/
