--- a/2.AddTwoNumbers.md
+++ b/2.AddTwoNumbers.md
@@ -10,8 +10,11 @@ _____________________________________________________________________
 ####**标签：**链表。 难度：中级
 ####**刷题收获：**
 - 另一个ACM讲leedcode代码的学习网站：[点击这里](http://www.acmerblog.com/leetcode-solution-add-two-numbers-6298.html)
+- 一个关于Segment的leedcode代码学习网站：[点击这里](https://segmentfault.com/a/1190000002986101)
 - 关于函数传值，尤其是给指针传值，已加入个人CSDN博客：[点击这里](http://blog.csdn.net/qianggezaici/article/details/52234515)
+
 _________________________________________________________________________________________________________
+
 ###解法一：
 说明：一开始理解有出入，写成从后往前加了。
 附上代码：完整代码
