--- a/2.AddTwoNumbers.md
+++ b/2.AddTwoNumbers.md
@@ -186,7 +186,7 @@ int main()
 	list3=s1.addTwoNumbers(list1, list2);	
 ```
 
-###方法二：有按正确理解重新写代码
+###方法二：又按正确理解重新写代码 递归
 **说明：**
 自己实现，递归写法，只贴出实现部分
 ```
@@ -259,7 +259,7 @@ public:
     }
 };
 ```
-###方法三：
+###方法三：迭代写法
 他山之石，可借鉴之，简洁.时间复杂度O(m+n)，空间复杂度O(1)
 ```
 class Solution {
@@ -289,4 +289,36 @@ public:
 		return preHead.next;
     }
 };
+```
+###学习方法四：
+他山之石，可以借鉴之。
+**思路**
+本题的思路很简单，按照小学数学中学习的加法原理从末尾到首位，对每一位对齐相加即可。技巧在于如何处理不同长度的数字，以及进位和最高位的判断。这里对于不同长度的数字，我们通过将较短的数字补0来保证每一位都能相加。递归写法的思路比较直接，即判断该轮递归中两个ListNode是否为null。
+
+  - 全部为null时，返回进位值
+  - 有一个为null时，返回不为null的那个ListNode和进位相加的值
+  - 都不为null时，返回 两个ListNode和进位相加的值
+####代码
+```
+public class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        return helper(l1,l2,0);
+    }
+
+    public ListNode helper(ListNode l1, ListNode l2, int carry){
+        if(l1==null && l2==null){
+            return carry == 0? null : new ListNode(carry);
+        }
+        if(l1==null && l2!=null){
+            l1 = new ListNode(0);
+        }
+        if(l2==null && l1!=null){
+            l2 = new ListNode(0);
+        }
+        int sum = l1.val + l2.val + carry;
+        ListNode curr = new ListNode(sum % 10);
+        curr.next = helper(l1.next, l2.next, sum / 10);
+        return curr;
+    }
+}
 ```
