--- a/80.RemoveDuplicatesfromSortedArrayII.md
+++ b/80.RemoveDuplicatesfromSortedArrayII.md
@@ -10,4 +10,59 @@ Given sorted array nums = [1,1,1,2,2,3],
 Your function should return length = 5, 
 with the first five elements of nums being 1, 1, 2, 2 and 3. 
 It doesn't matter what you leave beyond the new length.
+
 ---------------------------------------------------------------
+###方法一：
+####思路：
+ 设置存储索引位置index，设置一个连续的遍历i，设置一个计次count
+####代码：C++
+```
+#include<iostream>
+#include<vector>
+using namespace std;
+
+//C++
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+
+		if(nums.empty()) return 0;
+
+		if(nums.size()<3) return nums.size();
+
+        int index=0;
+		int count=1; //计次
+		for(int i=1; i<nums.size(); i++)
+		{
+			if(nums[i]!=nums[i-1])
+			{
+				index++;
+				nums[index]=nums[i];
+				count=1;
+			}
+			else if( count<2 )
+			{
+				index++;
+				nums[index]=nums[i];
+				count++;
+			}
+		}
+		return index+1;
+    }
+};
+
+int main()
+{
+	vector<int> test1;
+	test1.resize(6);
+	test1[0]=1;
+	test1[1]=1;
+	test1[2]=1;
+	test1[3]=2;
+	test1[4]=2;
+	test1[5]=3;
+
+	Solution s1;
+	cout<<s1.removeDuplicates(test1)<<endl;
+}
+```
