--- a/80.RemoveDuplicatesfromSortedArrayII.md
+++ b/80.RemoveDuplicatesfromSortedArrayII.md
@@ -66,3 +66,27 @@ int main()
 	cout<<s1.removeDuplicates(test1)<<endl;
 }
 ```
+------------------------------------------------------------
+###方法二：
+时间复杂度O(n),空间复杂度O（1）
+####代码：
+```
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+
+		if(nums.size()<3) return nums.size();
+
+        int index=2;
+		for(int i=2; i<nums.size(); i++)
+		{
+			if(nums[i]!=nums[index-2])  //应该与index-2相比较
+			{                          //即与整理后的数组比较
+				nums[index++]=nums[i];
+			}
+
+		}
+		return index;
+    }
+};
+```
