--- a/80.RemoveDuplicatesfromSortedArrayII.md
+++ b/80.RemoveDuplicatesfromSortedArrayII.md
@@ -67,7 +67,7 @@ int main()
 }
 ```
 ------------------------------------------------------------
-###方法二：
+###方法二：扩展性好
 时间复杂度O(n),空间复杂度O（1）
 ####代码：
 ```
@@ -93,3 +93,28 @@ public:
 **说明：**
 - 1.c比c++快很多。
 - 2.可同理扩展成最多可允许n次，只需将2替换即可
+
+----------------------------------------------------------
+###方法三：
+从连续的角度去考虑
+####代码：
+```
+//从连续的角度考虑
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+
+		const int n=nums.size();
+
+        int index=0;
+		for(int i=0; i<n; i++)
+		{
+			//排除掉不复制的情况，即中间段为三个连续
+			if(0<i && i<n-1 && nums[i]==nums[i-1] && nums[i]==nums[i+1])
+				continue;
+			nums[index++]=nums[i];
+		}
+		return index;
+    }
+};
+```
