--- a/33.SearchinRotatedSortedArray.md
+++ b/33.SearchinRotatedSortedArray.md
@@ -5,3 +5,87 @@
 You are given a target value to search. If found in the array return its index, otherwise return -1.
 You may assume no duplicate exists in the array.
 - Difficulty: Hard
+###方法一：
+时间复杂度O(log(n)),空间复杂度O(1)
+####完整代码
+```
+#include<iostream>
+#include<vector>
+using namespace std;
+
+//第一步:找到pivot分界点
+//第二步,分别对分界点两边做二分查找
+class Solution {
+public:
+    int search(vector<int>& nums, int target) {
+		if(nums.empty()) return 0;
+		
+		//第一步：寻找突变位置，二分查找
+		int pivot=step1(nums,0,nums.size()-1);
+		//第二步：分别进行二分查找
+		int* result=new int;
+		bool result1=BinaryResearch(nums, 0, pivot,target,result);
+		bool result2=BinaryResearch(nums, pivot+1, nums.size()-1,target,result);
+		if(result1) return *result;
+		else if(result2) return *result;
+		else
+			return -1;
+		return -1;
+    }
+	/*********************************
+	/第一步：返回突变的前一个位置
+	************************************/
+	int step1(vector<int>& nums1, int begin1, int end1)
+	{
+		if(begin1==end1) return begin1; //只有一个元素
+
+		int mid1=(begin1+end1)/2;		
+		if(nums1[mid1]>nums1[mid1+1])
+			return mid1;
+		else if(nums1[begin1]<nums1[mid1])  //前半段不减
+			return step1(nums1, mid1, end1);
+		else if(nums1[mid1]<nums1[end1])
+			return step1(nums1, begin1, mid1);	
+		return 0;
+	}
+	/***********************************
+	/第二步：分别进行二分查找
+	************************************/
+	bool BinaryResearch(vector<int>& nums2, int begin2, int end2, int target, int* result)
+	{
+		if(begin2>end2) return 0;
+		while(begin2<end2)
+		{
+			int mid2=(begin2+end2)/2;
+			if(nums2[mid2]<target)
+				begin2=mid2+1;
+			else if(nums2[mid2]>target)
+				end2=mid2-1;
+			else 
+			{	*result=mid2; return 1;}	
+		}
+		if(begin2==end2 && nums2[begin2]==target)
+		{	*result=begin2; return 1;}
+		return 0;
+	}
+};
+
+vector<int> CreatVector(int* arr, int n)
+{
+	vector<int> vec;
+	for(int i=0; i<n; i++)
+	{
+		vec.push_back(arr[i]);
+	}
+	return vec;
+}
+int main()
+{
+	vector<int> test1;
+	int test[]={4,5,6,7,0,1,2};
+	test1=CreatVector(test,7);
+
+	Solution s1;
+	cout<<s1.search(test1,1)<<endl;
+}
+```
