--- a/33.SearchinRotatedSortedArray.md
+++ b/33.SearchinRotatedSortedArray.md
@@ -90,3 +90,48 @@ int main()
 	cout<<s1.search(test1,1)<<endl;
 }
 ```
+###方法二：时间复杂度O(log(n)),空间复杂度O(1)
+####代码：
+```
+class Solution {
+public:
+    int search(vector<int>& nums, int target) {
+        if(nums.empty()) return -1; ///少了不合理情况
+
+		int begin=0; 
+		int end=nums.size()-1;
+
+		while(begin<end)
+		{
+			int mid=(begin+end)/2;
+			if(nums[mid]==target)
+				return mid;
+			if(nums[begin]<nums[mid]) //前半段上升的情况，单调上升
+			{
+				if(target<=nums[mid] && nums[begin]<=target)
+				{
+					end=mid;
+				}
+				else
+				{
+					begin=mid+1;
+				}
+			}
+			else //前半段是先上升后下降的，后半段是单调上升
+			{
+				if(nums[mid+1]<=target && target<=nums[end])  ///前半段含mid，后半段便不能再含
+					begin=mid+1;
+				else
+					end=mid;
+			}
+		}
+		if(nums[begin]==target)
+			return begin;
+		else
+			return -1;
+    }
+};
+```
+**说明**：
+  - 1.分区间的讨论一定要不重不漏
+  - 2.要对不和理情况进行讨论
