--- a/81.SearchinRotatedSortedArrayII.md
+++ b/81.SearchinRotatedSortedArrayII.md
@@ -1,10 +1,10 @@
 ## 81. Search in Rotated Sorted Array II
 > Difficulty: Medium
-Follow up for "Search in Rotated Sorted Array":
-What if duplicates are allowed?
-
-Would this affect the run-time complexity? How and why?
-Write a function to determine if a given target is in the array.
+> Follow up for "Search in Rotated Sorted Array":
+> What if duplicates are allowed?
+> 
+> Would this affect the run-time complexity? How and why?
+> Write a function to determine if a given target is in the array.
 
 --------------------------------------------------------------------------
 
@@ -18,6 +18,9 @@ Write a function to determine if a given target is in the array.
     - 若A[m]>A[l],则区间[l，m]一定递增
     - 若A[m]==A[l]，那就不确定，就l++，去掉重复的元素，往下走。
 ------------------------------------------------------------------
+
+
+
 '''
 
 class Solution {
