--- a/81.SearchinRotatedSortedArrayII.md
+++ b/81.SearchinRotatedSortedArrayII.md
@@ -14,9 +14,9 @@
 因为第二种方法会误判[1,3,1,1,1]的前半段为单增
 因此：对第二种方法略作修改
     允许重复元素，则上一题中如果A[m]>A[l],那么[l,m]为递增序列的假设不成立，如[1,3,1,1,1]
-    如果A[m]>=A[l]，不能确定递增，那就把它拆分成两个部分
-    - 若A[m]>A[l],则区间[l，m]一定递增
-    - 若A[m]==A[l]，那就不确定，就l++，去掉重复的元素，往下走。
+- 如果A[m]>=A[l]，不能确定递增，那就把它拆分成两个部分
+  - 若A[m]>A[l],则区间[l，m]一定递增
+  - 若A[m]==A[l]，那就不确定，就l++，去掉重复的元素，往下走。
     
     
     
